area and better plots

--- a/test_code_drawing.ipynb
+++ b/test_code_drawing.ipynb
@@ -1,141 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "d08fc52e",
-   "metadata": {},
-   "source": [
-    "Nice looking triangles:\n",
-    "PList = [Point(0.8, 0.516), Point(-0.215, -0.557), Point(-0.611, 0.639)]\n",
-    "k = 2\n",
-    "\n",
-    "triangle 2:\n",
-    "[Point(-0.239, -0.96), Point(0.419, 0.652), Point(-0.36, -0.071)]"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a719b7da",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PList = [Point(-0.128, 0.24), Point(0.386, 0.188), Point(-0.476, 0.056)]\n",
-      "k = 2\n",
-      "0.28727077530505185\n",
-      "0.8813735870195429\n"
-     ]
-    },
-    {
-     "data": {
-      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d0\">\n<stop offset=\"0\" stop-color=\"#ff9832\" stop-opacity=\"1\" />\n<stop offset=\"1\" stop-color=\"#ff7f00\" stop-opacity=\"1\" />\n</radialGradient>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d1\">\n<stop offset=\"0\" stop-color=\"#377eb8\" stop-opacity=\"1\" />\n<stop offset=\"1\" stop-color=\"#5e97c6\" stop-opacity=\"1\" />\n</radialGradient>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d2\">\n<stop offset=\"0\" stop-color=\"#e41a1c\" stop-opacity=\"0.7\" />\n<stop offset=\"1\" stop-color=\"#e94749\" stop-opacity=\"0.4\" />\n</radialGradient>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"url(#d0)\" />\n<path d=\"M-0.12820064760776978,-0.2398264453883865 A2.2409890948467064,2.2409890948467064,0,0,0,0.3860250395737041,-0.1875403457494338 A4.63305889376171,4.63305889376171,0,0,1,-0.4756444020268486,-0.05605770422520617 A1.7131228369773364,1.7131228369773364,0,0,0,-0.1282006476077696,-0.23982644538838693 Z\" stroke=\"black\" stroke-opacity=\"0.5\" stroke-width=\"0.005\" fill=\"url(#d1)\" />\n<path d=\"M-0.4890106561719634,-0.16363547619228666 A0.11044889413398218,0.11044889413398218,0,0,0,-0.4768400822817655,0.05493205273822733 A2.054015385517285,2.054015385517285,0,0,0,0.4214918080940707,-0.07536954511528138 A0.11681827567469938,0.11681827567469938,0,0,0,0.39052507426271343,-0.30072056103737316 A6.719948221666313,6.719948221666313,0,0,1,-0.10366861069355005,-0.36574412664427136 A0.13230510918588873,0.13230510918588873,0,0,0,-0.2549289521138136,-0.20656942045458354 A13.813959791779265,13.813959791779265,0,0,0,-0.4890106561719634,-0.1636354761922867 Z\" stroke=\"black\" stroke-opacity=\"0.5\" stroke-width=\"0.005\" fill=\"url(#d2)\" />\n</svg>",
-      "text/plain": [
-       "<drawSvg.drawing.Drawing at 0x1c83ea615e0>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import drawSvg \n",
-    "from constructions import *\n",
-    "from hyperbolic.euclid.shapes import Circle as ECircle\n",
-    "from hyperbolic.poincare.shapes import *\n",
-    "from Triangle import *\n",
-    "\n",
-    "\n",
-    "backcolor = drawSvg.RadialGradient(0,0,1)\n",
-    "backcolor.addStop(0, '#ff9832', opacity=1)\n",
-    "backcolor.addStop(1, '#ff7f00', opacity=1)\n",
-    "\n",
-    "polycolor1 = drawSvg.RadialGradient(0,0,1)\n",
-    "polycolor1.addStop(0, '#377eb8', opacity=1)\n",
-    "polycolor1.addStop(1, '#5e97c6', opacity=1)\n",
-    "\n",
-    "polycolor2 = drawSvg.RadialGradient(0,0,1)\n",
-    "polycolor2.addStop(0, '#e41a1c', opacity=0.7)\n",
-    "polycolor2.addStop(1, '#e94749', opacity=0.4)\n",
-    "\n",
-    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill=backcolor)\n",
-    "polyStyle1 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005,  fill=polycolor1)\n",
-    "polyStyle2 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005, fill=polycolor2)\n",
-    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
-    "lineStyle2 = dict(hwidth=0.02, fill='yellow')\n",
-    "pointStyle1 = dict(radius=0.01, fill='#984ea3')\n",
-    "pointStyle2 = dict(radius=0.01, fill='yellow')\n",
-    "\n",
-    "\n",
-    "d = drawSvg.Drawing(2.1, 2.1, origin='center')\n",
-    "d.setRenderSize(500)\n",
-    "d.append(drawSvg.Circle(0, 0, 1, **backgroundStyle))\n",
-    "\n",
-    "#pl=randomPoints(3000)\n",
-    "\n",
-    "PList=randomPoints(3)\n",
-    "#PList = [Point(-0.239, -0.96), Point(0.419, 0.652), Point(-0.36, -0.071)]\n",
-    "k = 2\n",
-    "#k=random.randint(0,2)\n",
-    "\n",
-    "print('PList =', PList)\n",
-    "print('k =', k)\n",
-    "\n",
-    "Tri=Triangle.fromVertices(PList)\n",
-    "\n",
-    "IdealTri=Tri.surroundingIdealTriangle()\n",
-    "\n",
-    "delta = Tri.approx(64)\n",
-    "print(delta)\n",
-    "#delta=0.2\n",
-    "d.draw(Tri, **polyStyle1)\n",
-    "d.draw(Tri.neigbourhood(delta, k),**polyStyle2)\n",
-    "#d.draw(IdealTri, **polyStyle2)\n",
-    "#d.draw(Tri, **polyStyle1)\n",
-    "\n",
-    "#for p in pl:\n",
-    "    #d.draw(p,  **pointStyle1,  fill_opacity=0.5)\n",
-    "\n",
-    "'''\n",
-    "for i,v in enumerate(Tri.vertices):\n",
-    "    d.draw(v, radius=0.03, fill='yellow')\n",
-    "    d.draw(drawSvg.Text(str(i),0.05, *v, center=0.7))\n",
-    "\n",
-    "\n",
-    "for i,v in enumerate(IdealTri.vertices):\n",
-    "    d.draw(v, radius=0.03, fill='lightblue')\n",
-    "    d.draw(drawSvg.Text(str(i),0.05, *v, center=0.7))\n",
-    "\n",
-    "for i,e in enumerate(Tri.edges):\n",
-    "    d.draw(Tri.offsetEdge(i, delta, False), **lineStyle1)\n",
-    "\n",
-    "for i,e in enumerate(Tri.edges):\n",
-    "    d.draw(Tri.offsetEdge(i, delta, inner=True), **lineStyle2)\n",
-    "    #d.draw(drawSvg.Text(str(i), 0.05, *e.projShape.midpoint(), center=0.7))\n",
-    "'''\n",
-    "'''\n",
-    "if Tri.isCCW():\n",
-    "    print('Tri is CCW')\n",
-    "else:\n",
-    "    print('Tri is CW')\n",
-    "\n",
-    "if Tri.isDeltaslim(delta):\n",
-    "    print('Tri is delta-slim for delta =',delta)\n",
-    "else:\n",
-    "    print('Tri is not covered for delta =',delta)\n",
-    "'''\n",
-    "#print(IdealTri.isIdeal())\n",
-    "print(np.log(1+2**0.5))\n",
-    "#d.savePng('triangleDeltaNbh.png')\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "1bd7a25c",
    "metadata": {},
    "outputs": [
@@ -156,9 +23,8 @@
        "<drawSvg.drawing.Drawing at 0x1c83e913100>"
       ]
      },
-     "execution_count": 51,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -214,6 +80,170 @@
     "else:\n",
     "    print('Tri is not covered for delta =',delta)\n",
     "\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d08fc52e",
+   "metadata": {},
+   "source": [
+    "Nice looking triangles:\n",
+    "PList = [Point(0.8, 0.516), Point(-0.215, -0.557), Point(-0.611, 0.639)]\n",
+    "k = 2\n",
+    "\n",
+    "triangle 2:\n",
+    "[Point(-0.239, -0.96), Point(0.419, 0.652), Point(-0.36, -0.071)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "a719b7da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PList = [Ideal(0.218, -0.976), Point(-0.084, -0.666), Ideal(0.802, 0.597)]\n",
+      "k = 2\n",
+      "delta: 0.6716575169079377\n",
+      "area: 2.8342694540254456\n",
+      "inner angle of vert 0: 0\n",
+      "inner angle of vert 1: 0.3073231995643475\n",
+      "inner angle of vert 2: 0\n",
+      "Tri is CW\n",
+      "Tri is not covered for delta = 0.6716575169079377\n"
+     ]
+    },
+    {
+     "data": {
+      "image/svg+xml": "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n     width=\"500\" height=\"500.0\" viewBox=\"-1.05 -1.05 2.1 2.1\">\n<defs>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d0\">\n<stop offset=\"0\" stop-color=\"#ff9832\" stop-opacity=\"1\" />\n<stop offset=\"1\" stop-color=\"#ff7f00\" stop-opacity=\"1\" />\n</radialGradient>\n<radialGradient cx=\"0\" cy=\"0\" r=\"1\" gradientUnits=\"userSpaceOnUse\" id=\"d1\">\n<stop offset=\"0\" stop-color=\"#377eb8\" stop-opacity=\"1\" />\n<stop offset=\"1\" stop-color=\"#5e97c6\" stop-opacity=\"1\" />\n</radialGradient>\n</defs>\n<circle cx=\"0\" cy=\"0\" r=\"1\" stroke=\"#cc6500\" stroke-width=\"0.01\" fill=\"url(#d0)\" />\n<path d=\"M0.2180790473494611,0.9759311087915743 A0.4128059654951483,0.4128059654951483,0,0,0,-0.08404822271496137,0.6656310338909529 A2.460920916670747,2.460920916670747,0,0,1,0.8019589813976853,-0.5973791025434243 A1.5424034859439546,1.5424034859439546,0,0,0,0.21807904734946115,0.9759311087915752 Z\" stroke=\"black\" stroke-opacity=\"0.5\" stroke-width=\"0.005\" fill=\"url(#d1)\" />\n<path d=\"M0.21807904734946104,0.9759311087915743 L0.0,-0.0\" stroke=\"blue\" stroke-width=\"0.03\" />\n<path d=\"M0.2180790473494611,0.9759311087915743 L4.440892098500626e-16,-2.220446049250313e-16\" stroke=\"cyan\" stroke-width=\"0.03\" />\n<circle cx=\"0.0\" cy=\"-0.0\" r=\"0.03\" fill=\"yellow\" />\n<circle cx=\"4.440892098500626e-16\" cy=\"-2.220446049250313e-16\" r=\"0.03\" fill=\"green\" />\n<path d=\"M-0.08404822271496165,0.6656310338909542 L0.8857158796903912,0.9096752628453395\" stroke=\"blue\" stroke-width=\"0.03\" />\n<path d=\"M-0.0840482227149616,0.6656310338909541 L0.2046841336910361,-0.29177881897470326\" stroke=\"cyan\" stroke-width=\"0.03\" />\n<circle cx=\"0.8857158796903912\" cy=\"0.9096752628453395\" r=\"0.03\" fill=\"yellow\" />\n<circle cx=\"0.2046841336910361\" cy=\"-0.29177881897470326\" r=\"0.03\" fill=\"green\" />\n<path d=\"M0.8019589813976852,-0.5973791025434243 L0.0,2.220446049250313e-16\" stroke=\"blue\" stroke-width=\"0.03\" />\n<path d=\"M0.8019589813976854,-0.5973791025434246 L0.0,-1.1102230246251565e-15\" stroke=\"cyan\" stroke-width=\"0.03\" />\n<circle cx=\"0.0\" cy=\"2.220446049250313e-16\" r=\"0.03\" fill=\"yellow\" />\n<circle cx=\"0.0\" cy=\"-1.1102230246251565e-15\" r=\"0.03\" fill=\"green\" />\n<circle cx=\"0.21807904734946104\" cy=\"0.9759311087915743\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"0.21807904734946104\" y=\"0.9759311087915743\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">0</text>\n<circle cx=\"-0.0840482227149617\" cy=\"0.6656310338909542\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"-0.0840482227149617\" y=\"0.6656310338909542\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">1</text>\n<circle cx=\"0.8019589813976852\" cy=\"-0.5973791025434244\" r=\"0.03\" fill=\"yellow\" />\n<text x=\"0.8019589813976852\" y=\"-0.5973791025434244\" font-size=\"0.05\" text-anchor=\"middle\" dy=\"0.35em\">2</text>\n</svg>",
+      "text/plain": [
+       "<drawSvg.drawing.Drawing at 0x2518897e280>"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import drawSvg\n",
+    "import random\n",
+    "from constructions import *\n",
+    "from hyperbolic.euclid.shapes import Circle as ECircle\n",
+    "from hyperbolic.poincare.shapes import *\n",
+    "from Triangle import *\n",
+    "\n",
+    "\n",
+    "backcolor = drawSvg.RadialGradient(0,0,1)\n",
+    "backcolor.addStop(0, '#ff9832', opacity=1)\n",
+    "backcolor.addStop(1, '#ff7f00', opacity=1)\n",
+    "\n",
+    "polycolor1 = drawSvg.RadialGradient(0,0,1)\n",
+    "polycolor1.addStop(0, '#377eb8', opacity=1)\n",
+    "polycolor1.addStop(1, '#5e97c6', opacity=1)\n",
+    "\n",
+    "polycolor2 = drawSvg.RadialGradient(0,0,1)\n",
+    "polycolor2.addStop(0, '#e41a1c', opacity=0.7)\n",
+    "polycolor2.addStop(1, '#e94749', opacity=0.4)\n",
+    "\n",
+    "backgroundStyle = dict(stroke='#cc6500', stroke_width=0.01, fill=backcolor)\n",
+    "polyStyle1 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005,  fill=polycolor1)\n",
+    "polyStyle2 = dict(stroke='black', stroke_opacity=0.5, stroke_width=0.005, fill=polycolor2)\n",
+    "lineStyle1 = dict(hwidth=0.02, fill='#984ea3')\n",
+    "lineStyle2 = dict(hwidth=0.02, fill='yellow')\n",
+    "pointStyle1 = dict(radius=0.01, fill='#984ea3')\n",
+    "pointStyle2 = dict(radius=0.01, fill='yellow')\n",
+    "\n",
+    "\n",
+    "d = drawSvg.Drawing(2.1, 2.1, origin='center')\n",
+    "d.setRenderSize(500)\n",
+    "d.append(drawSvg.Circle(0, 0, 1, **backgroundStyle))\n",
+    "\n",
+    "#pl=randomPoints(3000)\n",
+    "\n",
+    "PList=randomPoints(3,2)\n",
+    "#PList = [Point(-0.2, -0.8), Point(0.2, 0.8), Point(-0.4, -0.071)]\n",
+    "k = 2\n",
+    "k=random.randint(0,2)\n",
+    "\n",
+    "print('PList =', PList)\n",
+    "print('k =', k)\n",
+    "\n",
+    "Tri=Triangle.fromVertices(PList)\n",
+    "\n",
+    "#IdealTri=Tri.surroundingIdealTriangle()\n",
+    "\n",
+    "delta = Tri.approx(64)\n",
+    "print(f'delta: {delta}')\n",
+    "print(f'area: {Tri.area()}')\n",
+    "#delta=0.2\n",
+    "d.draw(Tri, **polyStyle1)\n",
+    "#d.draw(Tri.neigbourhood(delta, k),**polyStyle2)\n",
+    "#d.draw(IdealTri, **polyStyle2)\n",
+    "#d.draw(Tri, **polyStyle1)\n",
+    "for k in range(3):\n",
+    "    print(f'inner angle of vert {k}: {Tri.innerAngle(k)}')\n",
+    "    v = Tri.vertices[k]\n",
+    "    e1 = Tri.edges[(k-1)%3].projShape\n",
+    "    e2 = Tri.edges[k].projShape\n",
+    "    tan1 = tangentLine(e1, *v).makeParallel(*v)\n",
+    "    tan2 = tangentLine(e2, *v)\n",
+    "    d.draw(tan1, stroke='blue', stroke_width=0.03)\n",
+    "    d.draw(tan2 , stroke='cyan', stroke_width=0.03)\n",
+    "    d.append(drawSvg.Circle(*tan1.endPoint(), 0.03, fill='yellow'))\n",
+    "    d.append(drawSvg.Circle(*tan2.endPoint(), 0.03, fill='green'))\n",
+    "    # t1x1, t1y1 = tan1.startPoint()\n",
+    "    # t1x2, t1y2 = tan1.endPoint()\n",
+    "    # t2x1, t2y1 = tan2.startPoint()\n",
+    "    # t2x2, t2y2 = tan2.endPoint()\n",
+    "    # vxt1, vyt1 = t1x2 - t1x1, t1y2 - t1y1\n",
+    "    # vxt2, vyt2 = t2x2 - t2x1, t2y2 - t2y1\n",
+    "    # print((vxt1,vyt1),(vxt2,vyt2))\n",
+    "    # print((math.hypot(vxt1,vyt1), math.hypot(vxt2, vyt2)))\n",
+    "    # print(vxt1*vxt2+vyt1*vyt2)\n",
+    "    # print(math.acos((vxt1*vxt2+vyt1*vyt2)/(math.hypot(vxt1,vyt1)*math.hypot(vxt2, vyt2))))\n",
+    "\n",
+    "#for p in pl:\n",
+    "    #d.draw(p,  **pointStyle1,  fill_opacity=0.5)\n",
+    "\n",
+    "\n",
+    "for i,v in enumerate(Tri.vertices):\n",
+    "    d.draw(v, radius=0.03, fill='yellow')\n",
+    "    d.draw(drawSvg.Text(str(i),0.05, *v, center=0.7))\n",
+    "\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "for i,v in enumerate(IdealTri.vertices):\n",
+    "    d.draw(v, radius=0.03, fill='lightblue')\n",
+    "    d.draw(drawSvg.Text(str(i),0.05, *v, center=0.7))\n",
+    "\n",
+    "for i,e in enumerate(Tri.edges):\n",
+    "    d.draw(Tri.offsetEdge(i, delta, False), **lineStyle1)\n",
+    "\n",
+    "for i,e in enumerate(Tri.edges):\n",
+    "    d.draw(Tri.offsetEdge(i, delta, inner=True), **lineStyle2)\n",
+    "    #d.draw(drawSvg.Text(str(i), 0.05, *e.projShape.midpoint(), center=0.7))\n",
+    "'''\n",
+    "\n",
+    "if Tri.isCCW():\n",
+    "    print('Tri is CCW')\n",
+    "else:\n",
+    "    print('Tri is CW')\n",
+    "\n",
+    "if Tri.isDeltaslim(delta):\n",
+    "    print('Tri is delta-slim for delta =',delta)\n",
+    "else:\n",
+    "    print('Tri is not covered for delta =',delta)\n",
+    "\n",
+    "#print(IdealTri.isIdeal())\n",
+    "#print(np.log(1+2**0.5))\n",
+    "#d.savePng('triangleDeltaNbh.png')\n",
     "d"
    ]
   }
